--- a/main.tex
+++ b/main.tex
@@ -80,5 +80,36 @@
 \input{./sections/titlepage}
 \pagenumbering{roman}
 
-\chapter*{Acknowledgement}
+\chapter*{Acknowledgement}%
+\addcontentsline{toc}{chapter}{Acknowledgement}%
+\label{acknowledgement}%
+\input{sections/acknowledgement}
+
+
+
+\chapter*{Abstract}%
+\addcontentsline{toc}{chapter}{Abstract}%
+\label{abstract}%
+\input{sections/abstract}
+
+\tableofcontents
+\thispagestyle{empty}
+\addtocounter{page}{-1}
+\newpage
+
+\listoffigures
+\addcontentsline{toc}{chapter}{List of Figures}
+\newpage
+
+\listoftables
+\addcontentsline{toc}{chapter}{List of Tables}
+\newpage
+
+\chapter*{Abbreviations}%
+\addcontentsline{toc}{chapter}{Abbreviations}%
+\label{abbreviations}%
+\input{sections/abbreviations}
+\newpage
+
+
 \end{document}
