chore: Update chapter heading formatting in main.tex

--- a/main.tex
+++ b/main.tex
@@ -58,14 +58,14 @@
 
 \makeatletter
 \renewcommand{\@makechapterhead}[1]{%\vspace*{50 pt}%
-{\setlength{\parindent}{0pt}\normalfont
+{\setlength{\parindent}{0pt}\normalfont%
 \bfseries\Huge\chaptername{\hspace*{0.25em}}\centering\thechapter{:}\ #1
 \par\nobreak\vspace{16 pt}}}
 \makeatother
 
 \makeatletter
 \renewcommand{\@makeschapterhead}[1]{%\vspace*{50 pt}%
-{\setlength{\parindent}{0pt}\normalfont
+{\setlength{\parindent}{0pt}\normalfont%
 \bfseries\Huge\centering\ #1
 \par\nobreak\vspace{16 pt}}}
 \makeatother
