i dunno whta to commit

--- a/main.tex
+++ b/main.tex
@@ -112,4 +112,10 @@
 \newpage
 
 
+\pagenumbering{arabic}
+\chapter{Introduction}%
+\label{introduction}%
+\input{chapters/introduction}
+
+
 \end{document}
