--- a/sections/titlepage.tex
+++ b/sections/titlepage.tex
@@ -20,7 +20,7 @@ LAMACHAUR, POKHARA
 \vspace{24pt}
 {\textbf{SOFTWARE REQUIREMENT SPECIFICATIONS}\par \textbf{on} \par}
 \vspace{14pt}
-{\textbf{ LitSwap }\par}
+{\textbf{ ePurano }\par}
 
 \vspace{14pt}
 {BY\par}
