--- a/sections/abbreviations.tex
+++ b/sections/abbreviations.tex
@@ -2,4 +2,5 @@
     \acro{ePurano}{The name of the application platform}
     \acro{P2P}{Peer to peer}
     \acro{SRS}{Software Requirements Specification}
+    \acro{SDLC}{Software Development Life Cycle}
    \end{acronym}
