update name to Rakshya-> Raksha

--- a/sections/titlepage.tex
+++ b/sections/titlepage.tex
@@ -27,7 +27,7 @@ LAMACHAUR, POKHARA
 \vspace{14pt}
     
 {SEAMOON PANDEY - PAS078BCT035\par}
-{RAKSHYA RAUT- PAS078BCT028\par}
+{RAKSHA RAUT- PAS078BCT028\par}
 
 \vspace{24pt}
 {TO\par}
