Add Diagrams and explanations (#5)
* update the heirarchy tree

* add image assets

* update diagrams
- add description for the ER diagram
- explain classes

* add dataflow diagram
add description for the use case

* update overall desc

* add api abbreviation

--- a/main.tex
+++ b/main.tex
@@ -111,6 +111,10 @@
 \label{requirements}
 \input{chapters/specific_requirements}
 \newpage
+\chapter{Diagrams}%
+\label{diagrams}
+\input{chapters/diagrams}
+\newpage
 
 \chapter*{Abbreviations}%
 \addcontentsline{toc}{chapter}{Abbreviations}%
