--- a/sections/abbreviations.tex
+++ b/sections/abbreviations.tex
@@ -3,4 +3,6 @@
     \acro{P2P}{Peer to peer}
     \acro{SRS}{Software Requirements Specification}
     \acro{SDLC}{Software Development Life Cycle}
+    \acro{ER}{Entity Relation}
+    \acro{API}{Application Programming Interface}
    \end{acronym}
