--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
     left=1.25in,
     right=1in,
     top=1in,
-    bottom=1in]{geometry} % Required for inserting images
+    bottom=1in]{geometry}% 
 
 \usepackage{fullpage}
 \usepackage{mathptmx}
@@ -19,7 +19,6 @@
 
 \renewcommand*\contentsname{Table of Contents}
 
-% Redefine the \numberline command for figures
 \newlength{\mylen}
 \renewcommand{\cftdotsep}{0.5}
 \renewcommand{\cftfigpresnum}{\hspace*{-1.5em}\figurename\enspace}
@@ -50,7 +49,7 @@
 {\titlerule*[0.35pc]{.}\contentspage}
 
 \titlecontents{subsection}
-[7.12em] %
+[3em] %
 {\smallskip}
 {\thecontentslabel\enspace}%\thecontentslabel
 {\hspace*{7.12em}}
