update date and  minor fix

--- a/sections/titlepage.tex
+++ b/sections/titlepage.tex
@@ -26,8 +26,8 @@ LAMACHAUR, POKHARA
 {BY\par}
 \vspace{14pt}
     
-{SEAMOON PANDEY - PAS078BCT035\par}
-{RAKSHA RAUT- PAS078BCT028\par}
+{\textbf{SEAMOON PANDEY} [PAS078BCT035]\par}
+{\textbf{RAKSHA RAUT} [PAS078BCT028]\par}
 
 \vspace{24pt}
 {TO\par}
@@ -35,8 +35,7 @@ LAMACHAUR, POKHARA
 {\textbf{Department of Computer and
 Electronics Engineering}\par}
 {POKHARA, NEPAL\par}
-{June 8, 2024\par}
-
+\today
     \vspace*{\fill}
 
     \end{center}
